Footer alignment fix

--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -1,9 +1,21 @@
 @import "./colors.module.scss";
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.gridContainer {
+  flex: 1 0 auto;
+  padding: 80px 0;
+}
+
 .form {
   border: 1px solid $darkGray;
   padding: 20px 0px;
   max-width: 100%;
 }
+
 .formName {
   display: flex;
   align-items: center;
@@ -13,6 +25,7 @@
   margin: 20px auto;
 	text-transform: uppercase;
 }
+
 .nameAbbreviation {
   font-size: 40px;
   font-weight: bold;
@@ -25,19 +38,23 @@
   align-items: center;
   justify-content: center;
 }
+
 .userName {
   font-size: 30px;
   font-weight: bold;
   word-break: break-all;
 }
+
 .memberTime {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
+
 .memberTimeImg {
   width: 20px;
 }
+
 .memberTimeText {
   font-size: 14px;
   color: $lightGray;
@@ -47,12 +64,14 @@
   font-size: 14px;
   font-weight: bold;
 }
+
 .inputFlexDiv {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 50px;
 }
+
 .inputFlex {
   width: 250px;
   background-color: transparent;
@@ -70,6 +89,7 @@
     color: white;
   }
 }
+
 .inputNormalDiv{
   display: flex;
   flex-direction: column;
@@ -77,11 +97,13 @@
   margin-top: 20px;
   gap: 20px;
 }
+
 .input {
   @extend .inputFlex;
 	text-transform: lowercase;
   width: 550px;
 }
+
 .formBtn {
   border-color: $lightRed;
   text-align: center;
@@ -108,6 +130,7 @@
   font-weight: bold;
   padding: 0px 0px 50px 0px;
 }
+
 .renderFormBtn {
   display: block;
   width: 200px;
